# inst-efficiency

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  inst_efficiency.py  inst_efficiency.py.default.conf  inst_efficiency.py.findpeak.conf  pyproject.toml
scripts/: build_hook.py
src/inst_efficiency/: __init__.py  inst-efficiency.default.conf  inst_efficiency.py
src/inst_efficiency/lib/: S15lib_w_fpfind.patch  color.py  compile_w_gcc.patch  g2lib.py  utils.py
src/inst_efficiency/lib/usbtmst4/: .gitignore  Makefile
src/inst_efficiency/lib/usbtmst4/apps/: Makefile
src/inst_efficiency/lib/usbtmst4/driver/: Makefile  usbtmst4.c
src/inst_efficiency/lib/usbtmst4/hotplug/: udevsrc
src/inst_efficiency/service/: server.py
