[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "inst-efficiency"
dynamic = ["version"]
description = "Python port of 'inst_efficiency.sh' CQT script"
authors = [
    {author = "Justin Peh", email = "pehyuxiang@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "configargparse>=1.7",
    "numpy>=1.24.4",
    "s15lib",
    "tqdm>=4.66.5",
    "fpfind",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]

[tool.uv.sources]
s15lib = { git = "https://github.com/s-fifteen-instruments/pyS15.git" }
fpfind = { git = "https://github.com/s-fifteen-instruments/fpfind.git" }

[project.scripts]
inst-efficiency = "inst_efficiency.inst_efficiency:main"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.version.format]
dirty = "v{base_version}+{build_date:%Y%m%d}"

[tool.hatch.build.hooks.custom]
path = "scripts/build_hook.py"
